@@ -1,4 +1,4 @@
-@set UPDATED 22 March 2007
-@set UPDATED-MONTH March 2007
-@set EDITION 1.0.2
-@set VERSION 1.0.2
+@set UPDATED 15 April 2007
+@set UPDATED-MONTH April 2007
+@set EDITION 1.1.0
+@set VERSION 1.1.0
